[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version ="1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
